# Agent-Backend

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_PR.md  Dockerfile  Makefile  OPS_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  run
.cursor/rules/: keep-running.mdc  project-conventions.mdc
app/: __init__.py  cli.py  constants.py  main.py  task_processor.py
app/adapters/: __init__.py  base.py  claude_local.py  cli.py  cloud.py  factory.py  local.py
app/code_review/: __init__.py  runner.py
app/config/: __init__.py  loader.py  schemas.py
app/context/: __init__.py  summarizer.py
app/embedding/: __init__.py  engine.py
app/routers/: __init__.py  chat.py  code_review.py  health.py  sessions.py  team_admin.py  team_room.py  tools.py
config/: app.yaml.example  models.yaml  models.yaml.example
docs/: API.md
hooks/: post-merge
scripts/: clean-test-db.sh  create-test-db.sh  setup-system-postgres.sh  test-node-integrations.sh
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_adapters_claude_local.py  test_adapters_cli.py  test_app_config_local.py  test_cli_main.py  test_code_review.py  test_config_loader.py  test_design_logic.py  test_integration_real_ai.py  test_local_run_db.py  test_main_api.py  test_memory_stages.py  test_real_local.py  test_run.py  test_task_conversation_separation.py  test_team_api.py  test_tools_api.py  test_ui_pages.py  test_web_layout.py  test_web_pages_aura.py  test_web_ui.py
web-ui/: chat.html  chat.js  index.html  script.js  style.css
(+18 files in other folders)
